--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nextra-theme-blog": "^2.0.0-beta.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "shiki": "^0.14.0"
   },
   "prettier": {
     "arrowParens": "always",
