--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@code-hike/mdx": "^0.8.0",
+    "@react-three/drei": "^9.56.25",
+    "@react-three/fiber": "^8.11.2",
     "gray-matter": "^4.0.2",
     "next": "12.0.8",
     "nextra": "^2.0.0-beta.5",
