--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.2",
     "gray-matter": "^4.0.2",
-    "next": "12.0.8",
+    "next": "^12.3.4",
     "nextra": "^2.0.0-beta.5",
     "nextra-theme-blog": "^2.0.0-beta.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rss": "^1.2.2",
-    "shiki": "^0.14.0"
+    "shiki": "^0.14.0",
+    "yarn": "^1.22.19"
   },
   "prettier": {
     "arrowParens": "always",
