--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "node ./scripts/gen-rss.js && next build",
+    "just-build": "next build",
     "start": "next start"
   },
   "dependencies": {
