--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@code-hike/mdx": "^0.8.0",
-    "gray-matter": "^4.0.2",
-    "next": "12.0.8",
-    "nextra": "^2.0.0-beta.5",
-    "nextra-theme-blog": "^2.0.0-beta.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rss": "^1.2.2",
-    "shiki": "^0.14.0"
+    "matter-js": "^0.19.0",
+    "next": "^14.1.0",
+    "nextra": "^2.13.3",
+    "nextra-theme-blog": "^2.13.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "prettier": {
     "arrowParens": "always",
