--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nextra": "^2.13.3",
     "nextra-theme-blog": "^2.13.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rss": "^1.2.2"
   },
   "prettier": {
     "arrowParens": "always",
