--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "matter-js": "^0.19.0",
     "next": "^14.1.0",
     "nextra": "^2.13.3",
